# church

./: Church.hs  church.cabal
Church/: FromChurch.hs  TF.hs  ToChurch.hs
