cabal-version: 2.2
name: church
homepage: https://github.com/exordium/class#readme
version: 0.1.0.0
category: Generics
synopsis: Automatically convert Generic instances to and from church representations
stability: cursed
bug-reports: https://github.com/exordium/church/issues
author: Dai
maintainer: daig@sodality.cc
copyright: 2018 Sodality
license: MIT

source-repository head
  type: git
  location: https://github.com/exordium/church

library
  exposed-modules: Church
  other-modules: Church.TF, Church.ToChurch, Church.FromChurch
  build-depends: base
  default-language: Haskell2010
  default-extensions: AllowAmbiguousTypes, TypeApplications, TypeFamilies, ScopedTypeVariables, DataKinds, FlexibleContexts, DefaultSignatures, TypeOperators, MultiParamTypeClasses, PolyKinds, FlexibleInstances
